--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/averger/OpenClassrooms-API#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "multer": "^1.4.3"
+    "dotenv": "^10.0.0",
+    "helmet": "^4.6.0",
+    "multer": "^1.4.3",
+    "password-validator": "^5.1.1"
   }
 }
